# TheCalculater

./: .gitignore  CMakeLists.txt  LICENSE  resources.qrc
include/: ProgramArgs.hpp  appdef.hpp  mainwindow.h  mainwindow.ui
include/debug/: stacktrace.hpp
include/init/: posix.hpp  windows.hpp
include/spdlog/: pch.h
src/: main.cpp
src/ui/: mainwindow.cpp
src/util/: ProgramArgs.cpp
translations/: TheCalculater_zh_CN.ts
